# publisher

./: .gitignore  README.md  RELEASE_NOTES_V0.1.0.md  RELEASE_NOTES_V0.2.0.md  RELEASE_NOTES_V0.3.0.md  RELEASE_NOTES_V0.3.1.md  RELEASE_NOTES_V0.3.2.md  RELEASE_NOTES_V0.3.3.md  RELEASE_NOTES_V0.4.0.md  RELEASE_NOTES_V0.4.1.md  RELEASE_NOTES_V0.4.2.md  RELEASE_NOTES_V0.4.3.md  RELEASE_NOTES_V0.4.4.md  RELEASE_NOTES_V0.5.0.md  RELEASE_NOTES_V0.5.1.md  RELEASE_NOTES_V0.5.2.md  RELEASE_NOTES_V0.5.3.md  RELEASE_NOTES_V0.5.4.md  RELEASE_NOTES_VIDEO_EDITOR_V1.0.0.md  RELEASE_NOTES_VIDEO_EDITOR_V1.0.1.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.0.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.1.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.2.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.3.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.4.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.5.md  RELEASE_NOTES_VIDEO_EDITOR_V1.1.6.md  RELEASE_NOTES_VIDEO_EDITOR_V1.2.0.md  RELEASE_NOTES_VIDEO_EDITOR_V1.2.1.md  RELEASE_NOTES_VIDEO_EDITOR_V1.2.2.md  THIRD_PARTY_NOTICES.md  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
coin-data-manifests/: linxy_btc_eth_sources_2026-07-24.txt
coin-v7/: trigger.txt
coin-v8/: trigger.txt
docs/: ARCHITECTURE.md  BACKUP_PRIVACY_UNINSTALL.md  CODEX_BUILD_SPEC.md  FACEBOOK_SETUP.md  INSTALL_WINDOWS.md  PILOT_ACCEPTANCE.md  RECOVERY_RUNBOOK.md  TIKTOK_FIRST_RUN.md
editor_tests/: test_editor.py
scripts/: build_installer.ps1  build_windows.ps1  fetch_ffprobe.ps1  install_verification_task.ps1  installer.iss  package_windows.ps1  run_dev.ps1  smoke_windows.ps1  temp_vietlott_export.py  temp_vietlott_export_compact.py  (+1 more)
(+99 files in other folders)
