[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxh-publisher"
version = "0.5.0"
description = "Ứng dụng Windows hỗ trợ lên lịch video đồng bộ Facebook Fanpage và TikTok."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx==0.28.1",
  "keyring==25.7.0",
  "playwright==1.61.0",
  "tzdata==2026.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
  "mypy==2.2.0",
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib==2026.6",
]

[project.scripts]
mxh-publisher = "mxh_publisher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
