[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxh-video-editor"
version = "1.2.1"
description = "Ứng dụng Windows cắt và dựng video dọc 9:16 độc lập."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
  "mypy==2.2.0",
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib==2026.6",
]

[project.scripts]
mxh-video-editor = "mxh_video_editor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["editor_tests"]
pythonpath = ["src"]
addopts = "-q"
